--- a/css/style.css
+++ b/css/style.css
@@ -575,12 +575,16 @@ video {
 	bottom: 0px;
 }
 
-.-right-0 {
-	right: 0px;
+.right-2 {
+	right: 0.5rem;
 }
 
 .top-0 {
 	top: 0px;
+}
+
+.-right-0 {
+	right: 0px;
 }
 
 .top-2 {
@@ -591,40 +595,8 @@ video {
 	right: 0px;
 }
 
-.right-1 {
-	right: 0.25rem;
-}
-
-.top-1 {
-	top: 0.25rem;
-}
-
-.right-2 {
-	right: 0.5rem;
-}
-
-.right-1\.5 {
-	right: 0.375rem;
-}
-
-.right-0\.5 {
-	right: 0.125rem;
-}
-
-.right-3 {
-	right: 0.75rem;
-}
-
-.right-5 {
-	right: 1.25rem;
-}
-
 .z-10 {
 	z-index: 10;
-}
-
-.z-0 {
-	z-index: 0;
 }
 
 .m-2 {
@@ -634,6 +606,11 @@ video {
 .mx-auto {
 	margin-left: auto;
 	margin-right: auto;
+}
+
+.mx-2 {
+	margin-left: 0.5rem;
+	margin-right: 0.5rem;
 }
 
 .my-4 {
@@ -671,21 +648,6 @@ video {
 	margin-right: 0.75rem;
 }
 
-.mx-2 {
-	margin-left: 0.5rem;
-	margin-right: 0.5rem;
-}
-
-.mx-6 {
-	margin-left: 1.5rem;
-	margin-right: 1.5rem;
-}
-
-.mx-8 {
-	margin-left: 2rem;
-	margin-right: 2rem;
-}
-
 .mr-6 {
 	margin-right: 1.5rem;
 }
@@ -694,16 +656,24 @@ video {
 	margin-right: 2rem;
 }
 
-.mt-2 {
-	margin-top: 0.5rem;
+.mb-4 {
+	margin-bottom: 1rem;
+}
+
+.-ml-0\.5 {
+	margin-left: -0.125rem;
+}
+
+.-ml-0 {
+	margin-left: 0px;
 }
 
 .mb-2 {
 	margin-bottom: 0.5rem;
 }
 
-.mb-4 {
-	margin-bottom: 1rem;
+.mt-2 {
+	margin-top: 0.5rem;
 }
 
 .ml-16 {
@@ -722,6 +692,10 @@ video {
 	margin-left: 2rem;
 }
 
+.mb-1 {
+	margin-bottom: 0.25rem;
+}
+
 .mr-2 {
 	margin-right: 0.5rem;
 }
@@ -732,26 +706,6 @@ video {
 
 .mb-3 {
 	margin-bottom: 0.75rem;
-}
-
-.mb-1 {
-	margin-bottom: 0.25rem;
-}
-
-.ml-0\.5 {
-	margin-left: 0.125rem;
-}
-
-.ml-0 {
-	margin-left: 0px;
-}
-
-.-ml-0\.5 {
-	margin-left: -0.125rem;
-}
-
-.-ml-0 {
-	margin-left: 0px;
 }
 
 .block {
@@ -774,16 +728,8 @@ video {
 	display: none;
 }
 
-.h-5 {
-	height: 1.25rem;
-}
-
-.h-48 {
-	height: 12rem;
-}
-
-.h-6 {
-	height: 1.5rem;
+.h-8 {
+	height: 2rem;
 }
 
 .h-auto {
@@ -798,24 +744,24 @@ video {
 	height: 24rem;
 }
 
-.h-8 {
-	height: 2rem;
+.h-6 {
+	height: 1.5rem;
 }
 
-.w-12 {
-	width: 3rem;
+.w-8 {
+	width: 2rem;
 }
 
-.w-5 {
-	width: 1.25rem;
+.w-10 {
+	width: 2.5rem;
+}
+
+.w-\[95\%\] {
+	width: 95%;
 }
 
 .w-full {
 	width: 100%;
-}
-
-.w-6 {
-	width: 1.5rem;
 }
 
 .w-40 {
@@ -826,8 +772,8 @@ video {
 	width: auto;
 }
 
-.w-10 {
-	width: 2.5rem;
+.w-6 {
+	width: 1.5rem;
 }
 
 .w-4 {
@@ -838,32 +784,16 @@ video {
 	width: 24rem;
 }
 
+.w-12 {
+	width: 3rem;
+}
+
 .w-32 {
 	width: 8rem;
 }
 
-.w-8 {
-	width: 2rem;
-}
-
-.w-20 {
-	width: 5rem;
-}
-
-.w-\[90\%\] {
-	width: 90%;
-}
-
 .w-\[98\%\] {
 	width: 98%;
-}
-
-.w-\[95\%\] {
-	width: 95%;
-}
-
-.w-\[97\%\] {
-	width: 97%;
 }
 
 .max-w-screen-2xl {
@@ -959,9 +889,9 @@ video {
 	border-color: rgba(229, 231, 235, var(--tw-border-opacity));
 }
 
-.bg-indigo-500 {
+.bg-white {
 	--tw-bg-opacity: 1;
-	background-color: rgba(99, 102, 241, var(--tw-bg-opacity));
+	background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
 }
 
 .bg-indigo-600 {
@@ -979,23 +909,9 @@ video {
 	background-color: rgba(67, 56, 202, var(--tw-bg-opacity));
 }
 
-.bg-white {
-	--tw-bg-opacity: 1;
-	background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
-}
-
 .bg-gray-200 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
-}
-
-.bg-gray-500 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(107, 114, 128, var(--tw-bg-opacity));
-}
-
-.bg-transparent {
-	background-color: transparent;
 }
 
 .fill-current {
@@ -1007,16 +923,12 @@ video {
 	   object-fit: cover;
 }
 
-.p-2 {
-	padding: 0.5rem;
-}
-
 .p-1 {
 	padding: 0.25rem;
 }
 
-.p-4 {
-	padding: 1rem;
+.p-2 {
+	padding: 0.5rem;
 }
 
 .py-4 {
@@ -1027,6 +939,11 @@ video {
 .px-4 {
 	padding-left: 1rem;
 	padding-right: 1rem;
+}
+
+.px-2 {
+	padding-left: 0.5rem;
+	padding-right: 0.5rem;
 }
 
 .py-10 {
@@ -1047,11 +964,6 @@ video {
 .py-12 {
 	padding-top: 3rem;
 	padding-bottom: 3rem;
-}
-
-.px-2 {
-	padding-left: 0.5rem;
-	padding-right: 0.5rem;
 }
 
 .py-3 {
@@ -1077,31 +989,6 @@ video {
 .py-8 {
 	padding-top: 2rem;
 	padding-bottom: 2rem;
-}
-
-.py-1 {
-	padding-top: 0.25rem;
-	padding-bottom: 0.25rem;
-}
-
-.px-1\.5 {
-	padding-left: 0.375rem;
-	padding-right: 0.375rem;
-}
-
-.px-1 {
-	padding-left: 0.25rem;
-	padding-right: 0.25rem;
-}
-
-.px-0\.5 {
-	padding-left: 0.125rem;
-	padding-right: 0.125rem;
-}
-
-.px-0 {
-	padding-left: 0px;
-	padding-right: 0px;
 }
 
 .px-3 {
@@ -1169,12 +1056,12 @@ video {
 	font-weight: 400;
 }
 
-.font-bold {
-	font-weight: 700;
-}
-
 .font-medium {
 	font-weight: 500;
+}
+
+.font-bold {
+	font-weight: 700;
 }
 
 .font-semibold {
@@ -1196,6 +1083,11 @@ video {
 	color: rgba(75, 85, 99, var(--tw-text-opacity));
 }
 
+.text-gray-700 {
+	--tw-text-opacity: 1;
+	color: rgba(55, 65, 81, var(--tw-text-opacity));
+}
+
 .text-gray-900 {
 	--tw-text-opacity: 1;
 	color: rgba(17, 24, 39, var(--tw-text-opacity));
@@ -1211,14 +1103,9 @@ video {
 	color: rgba(255, 255, 255, var(--tw-text-opacity));
 }
 
-.text-indigo-600 {
+.text-indigo-900 {
 	--tw-text-opacity: 1;
-	color: rgba(79, 70, 229, var(--tw-text-opacity));
-}
-
-.text-gray-700 {
-	--tw-text-opacity: 1;
-	color: rgba(55, 65, 81, var(--tw-text-opacity));
+	color: rgba(49, 46, 129, var(--tw-text-opacity));
 }
 
 .text-gray-800 {
@@ -1226,19 +1113,14 @@ video {
 	color: rgba(31, 41, 55, var(--tw-text-opacity));
 }
 
+.text-indigo-600 {
+	--tw-text-opacity: 1;
+	color: rgba(79, 70, 229, var(--tw-text-opacity));
+}
+
 .text-gray-400 {
 	--tw-text-opacity: 1;
 	color: rgba(156, 163, 175, var(--tw-text-opacity));
-}
-
-.text-indigo-500 {
-	--tw-text-opacity: 1;
-	color: rgba(99, 102, 241, var(--tw-text-opacity));
-}
-
-.text-indigo-900 {
-	--tw-text-opacity: 1;
-	color: rgba(49, 46, 129, var(--tw-text-opacity));
 }
 
 .text-opacity-80 {
@@ -1249,14 +1131,8 @@ video {
 	--tw-text-opacity: 0.9;
 }
 
-.shadow-sm {
-	--tw-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
-	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow {
-	--tw-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
-	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.opacity-0 {
+	opacity: 0;
 }
 
 .shadow-md {
@@ -1264,9 +1140,22 @@ video {
 	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.shadow-inner {
-	--tw-shadow: inset 0 2px 4px 0 rgba(0, 0, 0, 0.06);
-	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.transition-all {
+	transition-property: all;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+	transition-duration: 150ms;
+}
+
+.duration-200 {
+	transition-duration: 200ms;
+}
+
+.duration-150 {
+	transition-duration: 150ms;
+}
+
+.ease-in {
+	transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
 *{
   font-family: 'Poppins', sans-serif!important;
@@ -1274,6 +1163,10 @@ video {
 .focus-within\:outline-none:focus-within {
 	outline: 2px solid transparent;
 	outline-offset: 2px;
+}
+.hover\:bg-gray-100:hover {
+	--tw-bg-opacity: 1;
+	background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
 }
 .hover\:bg-indigo-700:hover {
 	--tw-bg-opacity: 1;
@@ -1291,18 +1184,6 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(55, 48, 163, var(--tw-bg-opacity));
 }
-.hover\:bg-gray-400:hover {
-	--tw-bg-opacity: 1;
-	background-color: rgba(156, 163, 175, var(--tw-bg-opacity));
-}
-.hover\:bg-gray-100:hover {
-	--tw-bg-opacity: 1;
-	background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
-}
-.hover\:bg-gray-50:hover {
-	--tw-bg-opacity: 1;
-	background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
-}
 .hover\:text-gray-900:hover {
 	--tw-text-opacity: 1;
 	color: rgba(17, 24, 39, var(--tw-text-opacity));
@@ -1315,21 +1196,9 @@ video {
 	--tw-text-opacity: 1;
 	color: rgba(31, 41, 55, var(--tw-text-opacity));
 }
-.hover\:text-indigo-700:hover {
-	--tw-text-opacity: 1;
-	color: rgba(67, 56, 202, var(--tw-text-opacity));
-}
 .hover\:text-gray-600:hover {
 	--tw-text-opacity: 1;
 	color: rgba(75, 85, 99, var(--tw-text-opacity));
-}
-.hover\:text-gray-700:hover {
-	--tw-text-opacity: 1;
-	color: rgba(55, 65, 81, var(--tw-text-opacity));
-}
-.hover\:text-indigo-800:hover {
-	--tw-text-opacity: 1;
-	color: rgba(55, 48, 163, var(--tw-text-opacity));
 }
 @media (min-width: 640px) {
 
@@ -1363,11 +1232,6 @@ video {
 		margin-right: 0.75rem;
 	}
 
-	.md\:my-4 {
-		margin-top: 1rem;
-		margin-bottom: 1rem;
-	}
-
 	.md\:block {
 		display: block;
 	}
@@ -1380,6 +1244,10 @@ video {
 		display: none;
 	}
 
+	.md\:w-12 {
+		width: 3rem;
+	}
+
 	.md\:w-auto {
 		width: auto;
 	}
@@ -1390,10 +1258,6 @@ video {
 
 	.md\:w-full {
 		width: 100%;
-	}
-
-	.md\:w-12 {
-		width: 3rem;
 	}
 
 	.md\:flex-row {
