--- a/css/style.css
+++ b/css/style.css
@@ -812,31 +812,6 @@ select {
 	margin-right: 0.75rem;
 }
 
-.my-12 {
-	margin-top: 3rem;
-	margin-bottom: 3rem;
-}
-
-.my-20 {
-	margin-top: 5rem;
-	margin-bottom: 5rem;
-}
-
-.my-32 {
-	margin-top: 8rem;
-	margin-bottom: 8rem;
-}
-
-.mx-6 {
-	margin-left: 1.5rem;
-	margin-right: 1.5rem;
-}
-
-.mx-10 {
-	margin-left: 2.5rem;
-	margin-right: 2.5rem;
-}
-
 .mr-6 {
 	margin-right: 1.5rem;
 }
@@ -889,16 +864,16 @@ select {
 	margin-right: 0.5rem;
 }
 
+.mt-10 {
+	margin-top: 2.5rem;
+}
+
 .mb-8 {
 	margin-bottom: 2rem;
 }
 
 .mb-3 {
 	margin-bottom: 0.75rem;
-}
-
-.mt-10 {
-	margin-top: 2.5rem;
 }
 
 .block {
@@ -961,12 +936,12 @@ select {
 	width: 100%;
 }
 
-.w-40 {
-	width: 10rem;
-}
-
 .w-auto {
 	width: auto;
+}
+
+.w-40 {
+	width: 10rem;
 }
 
 .w-6 {
@@ -993,10 +968,6 @@ select {
 	width: 33.333333%;
 }
 
-.w-1\/2 {
-	width: 50%;
-}
-
 .max-w-screen-2xl {
 	max-width: 1536px;
 }
@@ -1013,12 +984,12 @@ select {
 	max-width: 42rem;
 }
 
-.flex-shrink-0 {
-	flex-shrink: 0;
-}
-
 .flex-shrink {
 	flex-shrink: 1;
+}
+
+.flex-shrink-0 {
+	flex-shrink: 0;
 }
 
 .flex-grow {
@@ -1060,10 +1031,6 @@ select {
 
 .flex-wrap {
 	flex-wrap: wrap;
-}
-
-.content-center {
-	align-content: center;
 }
 
 .items-center {
@@ -1190,11 +1157,6 @@ select {
 	padding-right: 2.5rem;
 }
 
-.py-6 {
-	padding-top: 1.5rem;
-	padding-bottom: 1.5rem;
-}
-
 .py-12 {
 	padding-top: 3rem;
 	padding-bottom: 3rem;
@@ -1208,6 +1170,11 @@ select {
 .px-5 {
 	padding-left: 1.25rem;
 	padding-right: 1.25rem;
+}
+
+.py-6 {
+	padding-top: 1.5rem;
+	padding-bottom: 1.5rem;
 }
 
 .py-2 {
@@ -1235,21 +1202,6 @@ select {
 	padding-bottom: 0.25rem;
 }
 
-.px-6 {
-	padding-left: 1.5rem;
-	padding-right: 1.5rem;
-}
-
-.px-8 {
-	padding-left: 2rem;
-	padding-right: 2rem;
-}
-
-.px-12 {
-	padding-left: 3rem;
-	padding-right: 3rem;
-}
-
 .pb-4 {
 	padding-bottom: 1rem;
 }
@@ -1260,10 +1212,6 @@ select {
 
 .pr-2 {
 	padding-right: 0.5rem;
-}
-
-.pt-10 {
-	padding-top: 2.5rem;
 }
 
 .text-center {
@@ -1512,16 +1460,16 @@ select {
 		margin-right: 2rem;
 	}
 
+	.sm\:block {
+		display: block;
+	}
+
 	.sm\:w-1\/2 {
 		width: 50%;
 	}
 
 	.sm\:flex-row {
 		flex-direction: row;
-	}
-
-	.sm\:justify-between {
-		justify-content: space-between;
 	}
 
 	.sm\:px-4 {
@@ -1540,18 +1488,22 @@ select {
 		margin-right: 2rem;
 	}
 
-	.md\:mx-3 {
-		margin-left: 0.75rem;
-		margin-right: 0.75rem;
-	}
-
 	.md\:mx-10 {
 		margin-left: 2.5rem;
 		margin-right: 2.5rem;
 	}
 
+	.md\:mx-3 {
+		margin-left: 0.75rem;
+		margin-right: 0.75rem;
+	}
+
 	.md\:block {
 		display: block;
+	}
+
+	.md\:inline {
+		display: inline;
 	}
 
 	.md\:flex {
@@ -1566,6 +1518,10 @@ select {
 		width: 3rem;
 	}
 
+	.md\:w-4\/5 {
+		width: 80%;
+	}
+
 	.md\:w-auto {
 		width: auto;
 	}
@@ -1576,10 +1532,6 @@ select {
 
 	.md\:w-full {
 		width: 100%;
-	}
-
-	.md\:w-4\/5 {
-		width: 80%;
 	}
 
 	.md\:flex-row {
@@ -1598,11 +1550,6 @@ select {
 	.md\:px-12 {
 		padding-left: 3rem;
 		padding-right: 3rem;
-	}
-
-	.md\:py-20 {
-		padding-top: 5rem;
-		padding-bottom: 5rem;
 	}
 
 	.md\:px-8 {
@@ -1630,14 +1577,8 @@ select {
 		padding-right: 1.5rem;
 	}
 
-	.md\:px-10 {
-		padding-left: 2.5rem;
-		padding-right: 2.5rem;
-	}
-
-	.md\:px-16 {
-		padding-left: 4rem;
-		padding-right: 4rem;
+	.md\:pt-20 {
+		padding-top: 5rem;
 	}
 
 	.md\:pr-10 {
@@ -1646,10 +1587,6 @@ select {
 
 	.md\:pr-20 {
 		padding-right: 5rem;
-	}
-
-	.md\:pt-20 {
-		padding-top: 5rem;
 	}
 
 	.md\:text-6xl {
@@ -1687,11 +1624,6 @@ select {
 }
 @media (min-width: 1024px) {
 
-	.lg\:my-20 {
-		margin-top: 5rem;
-		margin-bottom: 5rem;
-	}
-
 	.lg\:mb-20 {
 		margin-bottom: 5rem;
 	}
@@ -1712,32 +1644,16 @@ select {
 		height: 100%;
 	}
 
-	.lg\:h-\[30rem\] {
-		height: 30rem;
-	}
-
-	.lg\:h-\[40rem\] {
-		height: 40rem;
-	}
-
-	.lg\:h-\[20rem\] {
-		height: 20rem;
-	}
-
-	.lg\:h-\[42rem\] {
-		height: 42rem;
-	}
-
-	.lg\:h-\[43rem\] {
-		height: 43rem;
-	}
-
 	.lg\:min-h-screen {
 		min-height: 100vh;
 	}
 
 	.lg\:w-1\/2 {
 		width: 50%;
+	}
+
+	.lg\:w-auto {
+		width: auto;
 	}
 
 	.lg\:w-1\/4 {
@@ -1748,26 +1664,12 @@ select {
 		width: 80%;
 	}
 
-	.lg\:w-auto {
-		width: auto;
-	}
-
-	.lg\:justify-between {
-		justify-content: space-between;
-	}
-
 	.lg\:justify-start {
 		justify-content: flex-start;
 	}
 
-	.lg\:py-6 {
-		padding-top: 1.5rem;
-		padding-bottom: 1.5rem;
-	}
-
-	.lg\:py-44 {
-		padding-top: 11rem;
-		padding-bottom: 11rem;
+	.lg\:justify-between {
+		justify-content: space-between;
 	}
 
 	.lg\:py-20 {
@@ -1775,14 +1677,9 @@ select {
 		padding-bottom: 5rem;
 	}
 
-	.lg\:px-16 {
-		padding-left: 4rem;
-		padding-right: 4rem;
-	}
-
-	.lg\:px-20 {
-		padding-left: 5rem;
-		padding-right: 5rem;
+	.lg\:py-6 {
+		padding-top: 1.5rem;
+		padding-bottom: 1.5rem;
 	}
 
 	.lg\:pt-44 {
