--- a/css/style.css
+++ b/css/style.css
@@ -734,6 +734,10 @@ select {
 	position: absolute;
 }
 
+.fixed {
+	position: fixed;
+}
+
 .inset-y-0 {
 	top: 0px;
 	bottom: 0px;
@@ -755,8 +759,36 @@ select {
 	top: 0.5rem;
 }
 
+.left-0 {
+	left: 0px;
+}
+
+.left-4 {
+	left: 1rem;
+}
+
+.-left-32 {
+	left: -8rem;
+}
+
+.-left-48 {
+	left: -12rem;
+}
+
+.-left-40 {
+	left: -10rem;
+}
+
 .z-10 {
 	z-index: 10;
+}
+
+.z-40 {
+	z-index: 40;
+}
+
+.z-50 {
+	z-index: 50;
 }
 
 .m-2 {
@@ -874,6 +906,14 @@ select {
 
 .mb-3 {
 	margin-bottom: 0.75rem;
+}
+
+.mt-28 {
+	margin-top: 7rem;
+}
+
+.mt-auto {
+	margin-top: auto;
 }
 
 .block {
@@ -1011,6 +1051,18 @@ select {
 	--tw-translate-x: 50%;
 }
 
+.translate-y-20 {
+	--tw-translate-y: 5rem;
+}
+
+.translate-y-0 {
+	--tw-translate-y: 0px;
+}
+
+.translate-y-32 {
+	--tw-translate-y: 8rem;
+}
+
 .cursor-pointer {
 	cursor: pointer;
 }
@@ -1045,6 +1097,10 @@ select {
 	justify-content: center;
 }
 
+.overflow-hidden {
+	overflow: hidden;
+}
+
 .rounded {
 	border-radius: 0.25rem;
 }
@@ -1063,6 +1119,10 @@ select {
 
 .border-t-2 {
 	border-top-width: 2px;
+}
+
+.border-b {
+	border-bottom-width: 1px;
 }
 
 .border-gray-300 {
@@ -1110,6 +1170,16 @@ select {
 	background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
 }
 
+.bg-gray-300 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(209, 213, 219, var(--tw-bg-opacity));
+}
+
+.bg-gray-100 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
+}
+
 .fill-current {
 	fill: currentColor;
 }
@@ -1119,12 +1189,30 @@ select {
 	   object-fit: cover;
 }
 
+.object-fill {
+	-o-object-fit: fill;
+	   object-fit: fill;
+}
+
+.object-contain {
+	-o-object-fit: contain;
+	   object-fit: contain;
+}
+
 .p-1 {
 	padding: 0.25rem;
 }
 
 .p-2 {
 	padding: 0.5rem;
+}
+
+.p-4 {
+	padding: 1rem;
+}
+
+.p-8 {
+	padding: 2rem;
 }
 
 .py-4 {
@@ -1202,6 +1290,11 @@ select {
 	padding-bottom: 0.25rem;
 }
 
+.px-8 {
+	padding-left: 2rem;
+	padding-right: 2rem;
+}
+
 .pb-4 {
 	padding-bottom: 1rem;
 }
@@ -1212,6 +1305,18 @@ select {
 
 .pr-2 {
 	padding-right: 0.5rem;
+}
+
+.pb-10 {
+	padding-bottom: 2.5rem;
+}
+
+.pt-20 {
+	padding-top: 5rem;
+}
+
+.pb-16 {
+	padding-bottom: 4rem;
 }
 
 .text-center {
@@ -1344,6 +1449,10 @@ select {
 	opacity: 0;
 }
 
+.opacity-100 {
+	opacity: 1;
+}
+
 .shadow-md {
 	--tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
 	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
@@ -1372,6 +1481,14 @@ select {
 
 .duration-75 {
 	transition-duration: 75ms;
+}
+
+.duration-300 {
+	transition-duration: 300ms;
+}
+
+.duration-700 {
+	transition-duration: 700ms;
 }
 
 .ease-in {
@@ -1577,6 +1694,16 @@ select {
 		padding-right: 1.5rem;
 	}
 
+	.md\:py-4 {
+		padding-top: 1rem;
+		padding-bottom: 1rem;
+	}
+
+	.md\:py-6 {
+		padding-top: 1.5rem;
+		padding-bottom: 1.5rem;
+	}
+
 	.md\:pt-20 {
 		padding-top: 5rem;
 	}
@@ -1587,6 +1714,14 @@ select {
 
 	.md\:pr-20 {
 		padding-right: 5rem;
+	}
+
+	.md\:pb-16 {
+		padding-bottom: 4rem;
+	}
+
+	.md\:pb-24 {
+		padding-bottom: 6rem;
 	}
 
 	.md\:text-6xl {
@@ -1624,8 +1759,16 @@ select {
 }
 @media (min-width: 1024px) {
 
+	.lg\:m-auto {
+		margin: auto;
+	}
+
 	.lg\:mb-20 {
 		margin-bottom: 5rem;
+	}
+
+	.lg\:mt-auto {
+		margin-top: auto;
 	}
 
 	.lg\:block {
@@ -1642,6 +1785,14 @@ select {
 
 	.lg\:h-full {
 		height: 100%;
+	}
+
+	.lg\:h-\[650px\] {
+		height: 650px;
+	}
+
+	.lg\:h-\[680px\] {
+		height: 680px;
 	}
 
 	.lg\:min-h-screen {
@@ -1672,6 +1823,14 @@ select {
 		justify-content: space-between;
 	}
 
+	.lg\:p-0 {
+		padding: 0px;
+	}
+
+	.lg\:p-4 {
+		padding: 1rem;
+	}
+
 	.lg\:py-20 {
 		padding-top: 5rem;
 		padding-bottom: 5rem;
@@ -1682,12 +1841,55 @@ select {
 		padding-bottom: 1.5rem;
 	}
 
+	.lg\:py-4 {
+		padding-top: 1rem;
+		padding-bottom: 1rem;
+	}
+
+	.lg\:px-6 {
+		padding-left: 1.5rem;
+		padding-right: 1.5rem;
+	}
+
+	.lg\:px-8 {
+		padding-left: 2rem;
+		padding-right: 2rem;
+	}
+
 	.lg\:pt-44 {
 		padding-top: 11rem;
 	}
 
 	.lg\:pl-16 {
 		padding-left: 4rem;
+	}
+
+	.lg\:pb-8 {
+		padding-bottom: 2rem;
+	}
+
+	.lg\:pb-12 {
+		padding-bottom: 3rem;
+	}
+
+	.lg\:pb-24 {
+		padding-bottom: 6rem;
+	}
+
+	.lg\:pl-8 {
+		padding-left: 2rem;
+	}
+
+	.lg\:pl-10 {
+		padding-left: 2.5rem;
+	}
+
+	.lg\:pl-12 {
+		padding-left: 3rem;
+	}
+
+	.lg\:pb-16 {
+		padding-bottom: 4rem;
 	}
 
 	.lg\:text-left {
