--- a/css/style.css
+++ b/css/style.css
@@ -754,6 +754,10 @@ select {
 	top: 0.5rem;
 }
 
+.left-0 {
+	left: 0px;
+}
+
 .z-50 {
 	z-index: 50;
 }
@@ -1010,6 +1014,10 @@ select {
 	transform: translateX(var(--tw-translate-x)) translateY(var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.translate-y-0 {
+	--tw-translate-y: 0px;
+}
+
 .translate-x-1\/2 {
 	--tw-translate-x: 50%;
 }
@@ -1018,8 +1026,16 @@ select {
 	--tw-translate-y: 8rem;
 }
 
-.translate-y-0 {
-	--tw-translate-y: 0px;
+.translate-y-6 {
+	--tw-translate-y: 1.5rem;
+}
+
+.translate-y-12 {
+	--tw-translate-y: 3rem;
+}
+
+.-translate-y-6 {
+	--tw-translate-y: -1.5rem;
 }
 
 .cursor-pointer {
@@ -1054,6 +1070,10 @@ select {
 
 .justify-center {
 	justify-content: center;
+}
+
+.overflow-hidden {
+	overflow: hidden;
 }
 
 .rounded {
@@ -1405,6 +1425,12 @@ select {
 	transition-duration: 150ms;
 }
 
+.transition-transform {
+	transition-property: transform;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+	transition-duration: 150ms;
+}
+
 .duration-150 {
 	transition-duration: 150ms;
 }
@@ -1575,6 +1601,10 @@ select {
 
 	.md\:w-full {
 		width: 100%;
+	}
+
+	.md\:w-1\/3 {
+		width: 33.333333%;
 	}
 
 	.md\:flex-row {
